[package]
name = "sessions"
version = "0.1.1"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"
futures = "0.3.9"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.12", features = ["derive", "unic"] }
actix-web-validator = "2.0.3"
regex = "1.4.3"
mongodb = "1.1.1"
actix-web = { version = "3.3.2", default_features = false, features = ["secure-cookies"] }
actix-service = "1.0.6"
cookie = { version = "0.15.0", features = ["secure", "percent-encode"] }
futures-util = "*"
serde_repr = "0.1.6"

[features]
default = ["secure"]
secure = []