[package]
name = "sessions"
version = "0.1.1"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = { version = "4.0.1", default_features = false, features = ["secure-cookies"] }
bitflags = "1.3.2"
bitflags_serde_shim = "0.2.2"
cookie = { version = "0.16.0", features = ["secure", "percent-encode"] }
futures-util = "0.3.21"
mongodb = "2.1.0"
regex = "1.4.3"
serde = "1.0.136"
serde_json = "1.0.79"

[features]
default = ["secure"]
secure = []
